--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,24 @@
         <activity
             android:name=".FaceDetectActivity"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ImageActivity"
+            android:screenOrientation="portrait" />
+        
+        <activity
+            android:name=".EyeRenderActivity"
+            android:screenOrientation="portrait" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
